framec_tests/common/tests/negative/test_smart_quotes.frm
fn test() {
    var msg = "This has smart quotes"
    var other = 'Single smart quote'
}
EOF < /dev/null
